feat(api): reworked naming convention for endpoints and added menu endpoint
